added findRecipesByIngredients function
